[package]
name = "complgen"
version = "0.1.3"
edition = "2021"
description = "A programming-language-agnostic shell completions generator"

[lib]
name = "complgen"
path = "src/lib.rs"

[[bin]]
name = "complgen"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.71"
bumpalo = "3.12.2"
chic = "1.2.2"
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10.0"
hashbrown = "0.13.2"
itertools = "0.10.5"
log = "0.4.19"
nom = "7.1.3"
nom_locate = "4.2.0"
railroad = "0.2.0"
roaring = "0.10.1"
tempfile = "3.6.0"
thiserror = "1.0.39"
ustr = "0.9.0"

[dev-dependencies]
proptest = "1.1.0"
