[package]
name = "complgen"
version = "0.4.0"
edition = "2024"
description = "Declarative bash/fish/zsh completions without writing shell scripts"

[lib]
name = "complgen"
path = "src/lib.rs"

[[bin]]
name = "complgen"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
bumpalo = "3.12.2"
chic = "1.2.2"
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10.0"
hashbrown = "0.13.2"
indexmap = "2.7.0"
itertools = "0.10.5"
log = "0.4.19"
nom = "7.1.3"
nom_locate = "4.2.0"
railroad = "0.2.0"
regex = "1.9.5"
roaring = "0.10.1"
slice-group-by = "0.3.1"
tempfile = "3.6.0"
thiserror = "1.0.39"
ustr = "0.9.0"

[dev-dependencies]
proptest = "1.1.0"
