[package]
name = "complgen"
version = "0.6.0"
edition = "2024"
description = "Declarative bash/fish/zsh completions without writing shell scripts"

[lib]
name = "complgen"
path = "src/lib.rs"

[[bin]]
name = "complgen"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
chic = "1.2.2"
clap = { version = "4.2.1", features = ["derive"] }
hashbrown = "0.13.2"
indexmap = "2.7.0"
itertools = "0.10.5"
nom = "7.1.3"
nom_locate = "4.2.0"
regex = "1.9.5"
roaring = "0.10.1"
thiserror = "1.0.39"
ustr = "0.9.0"
slice-group-by = "0.3.1"

[dev-dependencies]
proptest = "1.1.0"

[profile.dev]
debug = "line-tables-only"
